fixed a bug in the hidden nav based on the width of the page,added spacing in the text

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -38,6 +38,8 @@ $underlineBackground: linear-gradient(
       font-size: 1.3rem;
       color: #94949b;
       text-align: center;
+      line-height: 1.8rem;
+      letter-spacing: 1px;
     }
   }
 }
