--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -118,7 +118,9 @@
     color: #a1a1aa;
     text-wrap: wrap;
     max-width: 450px;
-    text-align: center
+    text-align: center;
+    line-height: 1.5rem;
+    letter-spacing: 0.4px;
   }
 
   #location{
